force-app/main/default/objects/DIR_Violation__c/fields/Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Date__c</fullName>
    <description>When the status changes, the user must update the date of this field.</description>
    <inlineHelpText>When the status changes, you must update the date of this field.</inlineHelpText>
    <label>Status Date</label>
    <type>Date</type>
</CustomField>