force-app/main/default/objects/DIR_Violation__c/fields/Total_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Amount__c</fullName>
    <inlineHelpText>Interest amount due on the violation.</inlineHelpText>
    <label>Total Interest Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>