force-app/main/default/objects/DIR_Violation__c/fields/Total_Wage_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Wage_Interest_Amount__c</fullName>
    <label>Total Wage Interest Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>