force-app/main/default/objects/DIR_Violation__c/fields/Total_Wage_Modifications__c.field-meta.xml
<CustomField>
    <fullName>Total_Wage_Modifications__c</fullName>
    <description>Total Wage Modifications for all Issue Modification Records</description>
    <label>Total Wage Modifications</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>