force-app/main/default/objects/DIR_Violation__c/fields/Variable_G__c.field-meta.xml
<CustomField>
    <fullName>Variable_G__c</fullName>
    <description>Holds the value either entered or set by the violation type when the violation is created.</description>
    <label>Variable G</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>