force-app/main/default/objects/DIR_Violation__c/fields/Violation_Type__c.field-meta.xml
<CustomField>
    <fullName>Violation_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the type of violation from the list of available violations</description>
    <label>Case Issue Type</label>
    <referenceTo>Violation_Type__c</referenceTo>
    <relationshipLabel>Case Issues</relationshipLabel>
    <relationshipName>Case_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>