force-app/main/default/objects/DIR_Violation__c/fields/Wage_Assessment_Before_Admin_Dismissal__c.field-meta.xml
<CustomField>
    <fullName>Wage_Assessment_Before_Admin_Dismissal__c</fullName>
    <description>Save Wage Assessment Before Updating Status to Administrative Dismissal. This will be used to re-enter wage assessment when status is set to Cancel-Invalid.</description>
    <label>Wage Assessment Before Admin Dismissal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>