force-app/main/default/objects/DIR_Violation__c/fields/Wage_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Wage_Balance_Due__c</fullName>
    <description>Sum of regular wages and interest wages due to the EE(s).</description>
    <formula>Non_Interest_Wage_Balance_Due__c +  Wage_Interest_Balance_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of regular wages and interest wages due to the EE(s). Non-Interest Wage Balance Due + Wage Interest Balance Due.</inlineHelpText>
    <label>Balance Due to EE(s)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>