force-app/main/default/objects/DIR_Violation__c/fields/Wage_Calculation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Wage_Calculation_End_Date__c</fullName>
    <label>Wage Calculation End Date</label>
    <type>Date</type>
</CustomField>