force-app/main/default/objects/DIR_Violation__c/fields/Wage_Interest_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Wage_Interest_Balance_Due__c</fullName>
    <formula>Total_Wage_Interest_Amount__c - Wage_Interest_Payments_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Wage Interest Amount - Wage Interest Payments Rec'd.</inlineHelpText>
    <label>Wage Interest Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>