force-app/main/default/objects/DIR_Violation__c/fields/Wage_Interest_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Wage_Interest_Payments_Received__c</fullName>
    <description>Total of Liability Payments under this Case Issue allocated to Wage Interest. Populated by LiabilityPaymentTrigger -&gt; LiabilityPaymentMethods apex classes.</description>
    <inlineHelpText>Total of all funds received allocated to BOFE Wage Interest.</inlineHelpText>
    <label>Wage Interest Payments Rec'd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>