force-app/main/default/objects/DIR_Violation__c/fields/Wage_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Wage_Payments_Received__c</fullName>
    <description>Total of Liability Payments under this Case Issue allocated to regular wages. Populated by LiabilityPaymentTrigger -&gt; LiabilityPaymentMethods apex classes.</description>
    <inlineHelpText>Total of all funds received allocated to regular Wages after claim / citation was issued.</inlineHelpText>
    <label>EE Payments Rec'd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>