force-app/main/default/objects/DIR_Violation__c/fields/Wages_Due__c.field-meta.xml
<CustomField>
    <fullName>Wages_Due__c</fullName>
    <description>Regular, non-interest, wages due on this violation. Derived from the Wage Assessment Formula on the violation type and the variable values entered by the user when creating the violation.</description>
    <inlineHelpText>This is the regular wage amount due including the most recent modification (if any).</inlineHelpText>
    <label>EE(s) Amt Assessed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>