force-app/main/default/objects/DIR_Violation__c/fields/X1_30_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>X1_30_Days_Past_Due__c</fullName>
    <formula>if(AND(Age__c &gt; 15,Age__c &lt;= 45), Penalty_Balance_Due__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1-30 Days Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>