force-app/main/default/objects/DIR_Violation__c/fields/X1_30_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>X1_30_Past_Due__c</fullName>
    <description>1-30 day past due penalty amount</description>
    <formula>IF ( ( ( ( TODAY() -  Payment_Due_Date__c ) &gt; 30 ) &amp;&amp; ( TODAY() -  Payment_Due_Date__c ) &lt;= 60 )  ,  Penalty_Balance_Due__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1 - 30 Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>