force-app/main/default/objects/DIR_Violation__c/fields/X31_60_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>X31_60_Past_Due__c</fullName>
    <description>31 - 60 days past due - penalties only</description>
    <formula>IF ( ( ( ( TODAY() -  Payment_Due_Date__c ) &gt; 60 ) &amp;&amp; ( TODAY() -  Payment_Due_Date__c ) &lt;= 90 )  ,  Penalty_Balance_Due__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>31 - 60 Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>