force-app/main/default/objects/DIR_Violation__c/fields/X731_1_095_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>X731_1_095_Days_Past_Due__c</fullName>
    <formula>if(AND(Age__c &gt; 745,Age__c &lt;= 1110), Penalty_Balance_Due__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>731-1,095 Days Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>