force-app/main/default/objects/DIR_Violation__c/fields/X90_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>X90_Days_Past_Due__c</fullName>
    <description>90+ Days past due - penalties only</description>
    <formula>IF ( ( ( TODAY() -  Payment_Due_Date__c ) &gt; 120 ) ,  Penalty_Balance_Due__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>90+ Days Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>