force-app/main/default/objects/DIR_Violation__c/recordTypes/Registration_Violations.recordType-meta.xml
<RecordType>
    <fullName>Registration_Violations</fullName>
    <active>true</active>
    <label>Registration Violations</label>
</RecordType>