force-app/main/default/objects/DIR_Violation__c/validationRules/Only_Senior_Deputies_Cancel_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Senior_Deputies_Cancel_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, "Canceled - Invalid")&amp;&amp; ISCHANGED( Status__c)&amp;&amp; !$Permission.LCO_Senior &amp;&amp;  RecordType.Name = "BOFE Violations"</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Only Senior Deputies can Cancel a Case Issue</errorMessage>
</ValidationRule>