force-app/main/default/objects/DIR_Violation__c/validationRules/Only_Sr_Deputies_Can_dismiss_liability.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Sr_Deputies_Can_dismiss_liability</fullName>
    <active>true</active>
    <description>Part of Requirement 17493: This validation rule insures that only senior deputies can mark a liability as dismissed. Updated for BOFE Senior Deputy Permissions</description>
    <errorConditionFormula>ISCHANGED ( Status__c ) &amp;&amp;
IF (RecordType.DeveloperName == 'BOFE_Violations', 
IF (ISPICKVAL(Status__c , 'Administrative Dismissal'), 
IF ($Permission.LCO_Senior , FALSE, TRUE), 
FALSE), 
FALSE)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Only BOFE Senior Deputies can update the status of Case Violations to Administrative Dismissal.</errorMessage>
</ValidationRule>